Added correlation ID (micrometer tracing) to identify each request's processing and jdbcConnectionDetails to see database connection in logs.